Fixed barra lateral collapsed mas espacio al profile picture

--- a/wallaclone/styles/dashboard2.css
+++ b/wallaclone/styles/dashboard2.css
@@ -116,8 +116,9 @@ HEADER
 
 #sidemenu #profile #photo, #sidemenu #profile #name{
     font-size: 24px;
-    padding: var(--padding) 0;
+    padding: var(--padding) 7px;;
     overflow:hidden;
+    
 }
 
 /* ITEMS */
